[package]
name = "pombase-gocam-process"
version = "0.39.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
pombase-gocam = { git = "https://github.com/pombase/pombase-gocam.git", version = "0.27.0" }
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
petgraph = { version = "0.7", features = ["serde-1"] }
anyhow = "1.0"
itertools = "0.14"