[package]
name = "pombase-gocam-process"
version = "0.105.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
pombase-gocam = "0.91.0"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
petgraph = { version = "0.8", features = ["serde-1"] }
anyhow = "1.0"
itertools = "0.14"
lazy_static = "1.5"
regex = "1.11"

